--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ email: hello@[this domain]
 
 social:
   - title: e-mail
-    description: '<span class="email-address">hello@[this domain]</span> for e-mail'
-    link: "/contact"
+    description: '<span class="email-address"> PGP email </span> will be provided'
+    link: "" # "/destino"
     alt: "Contact page"
   - title: github
     description: "dhrodao on GitHub"
