--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Daniel Hervás Rodao"
 SEOtitle: "Daniel Hervás Rodao · Student"
-description: "I'm a Telematis Engineering student at King's Juan Carlos University."
+description: "I'm a Telematis Engineering student at Rey Juan Carlos University."
 url: ""
 baseurl: ""
 lang: en
