--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ lang: en
 logo: "/assets/images/logo.png"
 favicon: "/assets/images/favicon.png"
 logo: "/assets/images/logo.png"
-name_img: "/assets/images/RaulSanMartin.png"
+name_img: ""
 author: "Daniel Hervás Rodao"
 permalink: /:categories/:title/
 theme: null # https://github.com/jekyll/jekyll/issues/7478#issuecomment-454346783
