--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "I'm a Telematis Engineering student at Rey Juan Carlos University.
 url: ""
 baseurl: ""
 lang: en
-logo: "/assets/images/logo.png"
+logo: "/static/logo.png"
 favicon: "/assets/images/favicon.png"
 logo: "/assets/images/logo.png"
 name_img: ""
